--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ version = attr: napari_cursor_tracker.__version__
 description = Plugin for easy manual annotation/tracking of 3D or 2D + t dataset by following the cursor.
 long_description = file: README.md
 long_description_content_type = text/markdown
+url = https://gitlab.com/epfl-center-for-imaging/napari-cursor-tracker.git
 
 author = Florian Aymanns
 author_email = florian.aymanns@epfl.ch
