First basic prototype of the tracking
The gui still has to be cleaned up and example data and tests need to be added.

--- a/src/napari_cursor_tracker/napari.yaml
+++ b/src/napari_cursor_tracker/napari.yaml
@@ -6,23 +6,12 @@ contributions:
       python_name: napari_cursor_tracker._sample_data:make_sample_data
       title: Load sample data from Cursor tracker
     - id: napari-cursor-tracker.make_qwidget
-      python_name: napari_cursor_tracker._widget:ExampleQWidget
-      title: Make example QWidget
-    - id: napari-cursor-tracker.make_magic_widget
-      python_name: napari_cursor_tracker._widget:example_magic_widget
-      title: Make example magic widget
-    - id: napari-cursor-tracker.make_func_widget
-      python_name: napari_cursor_tracker._widget:example_function_widget
-      title: Make example function widget
+      python_name: napari_cursor_tracker._widget:CursorTracker
+      title: CursorTracker
   sample_data:
     - command: napari-cursor-tracker.make_sample_data
       display_name: Cursor tracker
       key: unique_id.1
   widgets:
     - command: napari-cursor-tracker.make_qwidget
-      display_name: Example QWidget
-    - command: napari-cursor-tracker.make_magic_widget
-      display_name: Example Magic Widget
-    - command: napari-cursor-tracker.make_func_widget
-      autogenerate: true
-      display_name: Example Function Widget
+      display_name: Cursor tracker
