--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,10 @@
 [build-system]
-requires = ["setuptools>=42.0.0", "wheel"]
+requires = ["setuptools>=42.0.0", "wheel", "setuptools_scm"]
 build-backend = "setuptools.build_meta"
 
 
+[tool.setuptools_scm]
+write_to = "src/napari_hough_circle_detector/_version.py"
 
 [tool.black]
 line-length = 79
