--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ python_requires = >=3.8
 include_package_data = True
 package_dir =
     =src
+setup_requires = setuptools_scm
 
 # add your package requirements here
 
